--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -1,5 +1,5 @@
-/* Import normalize.css */
-@import 'normalize.css';
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+/*# sourceMappingURL=normalize.min.css.map */
 
 :root {
     --color-primary: #d73953;
@@ -7,8 +7,7 @@
     --color-white: #ffffff;
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
-    --text-color: --color-black;
-
+    --text-color: var(--color-black);
     --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
@@ -18,40 +17,36 @@
     --font-size-xx-large: 4.8rem;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
-
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-
     --section-header-align: center;
     --section-tagline-transform: uppercase;
-    --section-tagline-margin: 0;
     --section-title-margin: 0;
-    --section-title-color: --color-black;
+    --section-title-color: var(--color-black);
     --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-body-padding: 0 0 3rem;
     --section-footer-padding: 3rem 0 0;
+    --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
-
-    --nav-item-font-family: --font-family-title;
-    --nav-item-font-weight: --font-weight-bold;
-    --nav-item-font-size: --font-size-medium;
+    --nav-item-font-family: var(--font-family-title);
+    --nav-item-font-weight: var(--font-weight-bold);
+    --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: --color-white;
-
+    --nav-item-link-hover: var(--color-white);
+    --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
-    --button-border: 0.2rem solid var(--color);
-    --button-color: --color-black;
+    --button-border: 0.2rem solid var(--color-primary);
+    --button-color: var(--color-black);
     --button-text-decoration: none;
-    --button-font-size: --font-size-large;
-    --button-hover-color: --color-white;
+    --button-font-size: var(--font-size-large);
+    --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
-    --button-hover-background: --color-primary;
-
+    --button-hover-background: var(--color-primary);
     --header-padding: 4rem 0 0;
     --header-logo-position: relative;
     --header-logo-link-display: inline-block;
@@ -67,20 +62,30 @@
     --button-color: var(--color-white);
 }
 
-* {
+*, *:before, *:after {
     box-sizing: border-box;
 }
 
 html {
-    scroll-behavior: smooth;
-    font-size: 62.5%;
+      scroll-behavior: smooth;
+      font-size: 62.5%;
 }
 
-body a {
-    color: var(--color-black);
+body {
+    color: var(--text-color);
+    font-family: var(--font-family-base);
+    font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
+    line-height: var(--line-height-base);
+}
+  
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-title);
+   font-weight: var(--font-weight-bold);
 }
 
-a:any-link {
+a:link {
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -111,49 +116,56 @@ a:active {
     background-color: var(--button-hover-background);
 }
 
-body {
-    font-family: var(--font-family-base);
-    font-size: var(--font-size-medium);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
-}
-
-h1 h2 h3 h4 h5 h6 {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-}
-
-ul .row {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    list-style-type: none;
-}
-
-.col-1-3 {
-    width: 33.33%;
-    float: left;
-    padding: .5rem;
-}
-
-.col-1-2 {
-    width: 50%;
-    float: left;
-    padding: .5rem;
-}
-
-[class*='col-'] {
-    float: left;
-    padding: .5rem;
-}
-
-.row::after {
-    content: normal;
-    display: table;
-    clear: both;
-}
-
 .visually-hidden {
     display: none;
+}
+
+.card-category {
+  color: var(--color-primary);
+}
+
+.section {
+    padding: var(--section-padding);
+}
+
+.section-header {
+    text-align: var(--section-header-align);
+    padding: var(--section-header-padding);
+}
+
+.section-body {
+    padding: var(--section-body-padding);
+}
+
+.section-footer {
+    padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
+}
+
+.section-title {
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
+}
+
+.section-tagline {
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    text-transform: var(--section-tagline-transform);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-tagline-margin);
+}
+
+.container {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer {
+    padding: var(--footer-padding);
 }
 
 .navbar-menu {
@@ -161,8 +173,8 @@ ul .row {
 }
 
 .nav {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     text-align: center;
 }
@@ -178,7 +190,7 @@ ul .row {
 
 .nav .nav-link {
     display: block;
-    padding: .5rem 1rem .5rem 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .nav .nav-link:hover {
@@ -186,18 +198,65 @@ ul .row {
 }
 
 .nav .nav-link::before {
-    content: normal;
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     background-color: var(--color-white);
-    width: 0%;
-    height: .2rem;
+    width: 0;
+    height: 0.2rem;
 }
-
+  
 .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+}
+
+ul.row {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.col-1-3 {
+    width: 33.33%;
+}
+
+.col-1-2 {
+    width: 50%;
+}
+
+.footer-copyright {
+    margin: 0;
+    font-size: var(--font-size-small);
+    color: var(--text-color);
+}
+
+.footer ul {
+    text-align: right;
+}
+  
+.row::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+[class^='col-'] {
+    float: left;
+    padding: 0.5rem;
+}
+
+.footer-address {
+    color: var(--text-color);
+}
+
+.social-link {
+    display: block;
+}
+
+.social-link > svg {
+    fill: var(--text-color);
 }
 
 .card-services .card-title {
@@ -232,12 +291,39 @@ ul .row {
     color: var(--color-primary);
 }
 
+.section-hero {
+    background-size: 90rem auto;
+}
+
+.section-hero .section-title {
+    margin-bottom: 5rem;
+}
+
+.section-hero .section-inner {
+    padding: 10rem 40rem 2rem 0;
+}
+
+.header {
+    padding: var(--header-padding);
+}
+
+.header-logo {
+    position: var(--header-logo-position);
+}
+
+.header-logo a {
+    display: var(--header-logo-link-display);
+    position: var(--header-logo-link-position);
+    top: var(--header-logo-link-top);
+    left: var(--header-logo-link-left);
+}
+
 .card-work .card-outer {
     position: relative;
     overflow: hidden;
 }
 
-.card-work .card-image {
+.card-work .card-image img {
     height: 30rem;
     width: 100%;
     object-fit: cover;
@@ -274,105 +360,11 @@ ul .row {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 0;
     left: 0;
-    content: normal;
+    bottom: 0;
+    content: "";
 }
 
 .card-work:hover .card-title {
     opacity: 1;
-}
-
-.card-category .section-tagline {
-    color: var(--color-primary);
-}
-
-.header {
-    padding: var(--header-padding);
-}
-
-.header-logo {
-    position: var(--header-logo-position);
-}
-
-.header-logo a {
-    display: var(--header-logo-link-display);
-    position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
-}
-
-.section {
-    padding: var(--section-padding);
-}
-
-.section-header {
-    text-align: var(--section-header-align);
-    padding: var(--section-header-padding)
-}
-
-.section-hero {
-    background-size: 90rem auto;
-}
-
-.section-hero .section-title {
-    margin-bottom: 5rem;
-}
-
-.section-hero .section-inner {
-    padding: 10rem, 40rem, 2rem, 0;
-}
-
-.section-body {
-    padding: var(--section-body-padding);
-}
-
-.section-footer {
-    padding: var(--section-footer-padding);
-    text-align: section-footer-align;
-}
-
-.section-title {
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-title-margin);
-    color: var(--section-title-color);
-}
-
-.section-tagline {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-    text-transform: var(--section-tagline-transform)
-}
-
-.container {
-    width: 960px;
-    margin: auto;
-}
-
-.footer {
-    padding: var(--footer-padding);
-}
-
-.footer-copyright {
-    margin: 0;
-    font-size: var(--font-size-small);
-    color: var(--text-color);
-}
-
-.footer ul {
-    text-align: right;
-}
-
-.footer-address {
-    color: var(--text-color);
-}
-
-.social-link {
-    display: block;
-}
-
-.social-link > svg {
-    fill: var(--text-color);
 }
