--- a/0x03-sass_scss/103-sort_strings.scss
+++ b/0x03-sass_scss/103-sort_strings.scss
@@ -1,51 +1,44 @@
-/* sort a list n stuff */
+// 16. Sort
 
 @import "103-sort_list";
 $sort-order: a b c d e f g h i j k l m n o p q r s t u v w x y z !default;
 
 @function compare($string-a, $string-b, $sort-order) {
-  $string-a: to-lower-case($string-a + unquote(""));
-  $string-b: to-lower-case($string-b + unquote(""));
+    $string-a: to-lower-case($string-a + unquote(""));
+    $string-b: to-lower-case($string-b + unquote(""));
 
-  @for $i from 1 through min(str-length($string-a), str-length($string-b)) {
+    @for $i from 1 through min(str-length($string-a), str-length($string-b)) { 
+        $char-a: str-slice($string-a, $i, $i); 
+        $char-b: str-slice($string-b, $i, $i); 
 
-    $char-a: str-slice($string-a, $i, $i);
-    $char-b: str-slice($string-b, $i, $i);
-
-    @if $char-a and
-      $char-b and
-      index($sort-order, $char-a) !=
-      index($sort-order, $char-b)
-    {
-      @return index($sort-order, $char-a) < index($sort-order, $char-b);
+        @if $char-a and $char-b and index($sort-order, $char-a) != index($sort-order, $char-b) { 
+        @return index( 
+            $sort-order, $char-a) < index($sort-order, $char-b); 
+        }
     }
-  }
-
-  @return str-length($string-a) < str-length($string-b);
+    @return str-length($string-a) < str-length($string-b); 
 }
 
 @function swap($list, $index-a, $index-b) {
-  @if abs($index-a) > length($list) or abs($index-b) > length($list) {
+    @if abs($index-a) > length($list) or abs($index-b) > length($list) {
+        @return $list;
+    }
+    $temp: nth($list, $index-a);
+    $list: set-nth($list, $index-a, nth($list, $index-b));
+    $list: set-nth($list, $index-b, $temp);
     @return $list;
-  }
-
-  $temp: nth($list, $index-a);
-  $list: set-nth($list, $index-a, nth($list, $index-b));
-  $list: set-nth($list, $index-b, $temp);
-  @return $list;
 }
 
 @function sort($list, $sort-order) {
-  @for $i from 1 through length($list) {
-    @for $j from $i * -1 through -1 {
-      $j: abs($j);
-      @if $j > 1 and compare(nth($list, $j), nth($list, $j - 1), $sort-order) {
-        $list: swap($list, $j, $j - 1);
-      }
+    @for $i from 1 through length($list) {
+        @for $j from $i * -1 through -1 {
+            $j: abs($j);
+            @if $j > 1 and compare(nth($list, $j), nth($list, $j - 1), $sort-order) {
+                $list: swap($list, $j, $j - 1);
+            }
+        }
     }
-  }
-  @return $list;
+    @return $list;
 }
 
-$answer: sort($list_to_sort, $sort-order);
-@debug $answer;
+@debug "#{sort($list_to_sort, $sort-order)}";
