--- a/0x04-flexbox/101-style.css
+++ b/0x04-flexbox/101-style.css
@@ -8,39 +8,49 @@
 
 .container {
     display: flex;
+    flex-flow: row nowrap;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    color: white;
 }
 
 .box {
+    display: flex;
     justify-content: center;
-    text-align: center;
-    width: 100px;
-    height: 100px;
+    align-items: center;
+    align-self: baseline;
 }
 
 .box1 {
     background-color: var(--color-box-1);
-    flex: 1 1 auto;
+    font-size: 0.75rem;
+    height: 2.5rem;
+    width: 3rem;
 }
 
 .box2 {
     background-color: var(--color-box-2);
-    flex: 2 1 auto;
+    font-size: 1.5rem;
+    height: 3.5rem;
+    width: 5rem;
 }
 
 .box3 {
     background-color: var(--color-box-3);
-    flex: 4 1 auto;
+    font-size: 4rem;
+    height: 6rem;
+    width: 11rem;
 }
 
 .box4 {
     background-color: var(--color-box-4);
-    flex: 2 1 auto;
+    font-size: 1.5rem;
+    height: 3.5rem;
+    width: 5rem;
 }
 
 .box5 {
     background-color: var(--color-box-5);
-    flex: 1 1 auto;
+    font-size: 0.75rem;
+    height: 2.5rem;
+    width: 3rem;
 }
